--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ bleach==3.1.0
 certifi==2018.11.29
 cffi==1.12.1
 chardet==3.0.4
+colorlover==0.3.0
 conda==4.3.16
 constantly==15.1.0
 cryptography==2.5
 cssselect==1.0.3
+cufflinks==0.14.6
 cycler==0.10.0
 decorator==4.3.2
 defusedxml==0.5.0
@@ -40,6 +42,7 @@ mccabe==0.6.1
 mistune==0.8.4
 nbconvert==5.4.1
 nbformat==4.4.0
+nose==1.3.7
 notebook==5.7.4
 numpy==1.16.1
 pandas==0.24.1
@@ -48,6 +51,7 @@ parsel==1.5.1
 parso==0.3.4
 pexpect==4.6.0
 pickleshare==0.7.5
+plotly==3.6.1
 prometheus-client==0.5.0
 prompt-toolkit==2.0.8
 ptyprocess==0.6.0
@@ -67,6 +71,7 @@ pyzmq==17.1.2
 qtconsole==4.4.3
 queuelib==1.5.0
 requests==2.21.0
+retrying==1.3.3
 ruamel.yaml==0.15.88
 scipy==1.2.1
 Scrapy==1.6.0
